# pico2w-rush

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
